--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 async-openai = "0.26"
+anthropic-sdk = "0.1"
 async-trait = "0.1"
 aho-corasick = "1"
 regex = "1"
@@ -27,6 +28,8 @@ tracing = "0.1"
 [dev-dependencies]
 anyhow = "1"
 tokio-test = "0.4"
+tracing-subscriber = "0.3"
+reqwest = { version = "0.12", features = ["json"] }
 
 [features]
 default = []
