--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,13 +2,17 @@
 name = "talk"
 version = "0.1.0"
 edition = "2021"
-authors = ["Talk Contributors"]
+authors = ["gobenpark"]
 description = "A Rust library for creating controlled LLM agents with behavioral guidelines, tool integration, and multi-step conversation journeys"
 license = "MIT OR Apache-2.0"
-repository = "https://github.com/[org]/talk"
+repository = "https://github.com/gobenpark/talk"                                                                                                     # ⚠️ UPDATE THIS
+homepage = "https://github.com/gobenpark/talk"                                                                                                       # ⚠️ UPDATE THIS
+documentation = "https://docs.rs/talk"
+readme = "README.md"
 keywords = ["ai", "llm", "agent", "parlant", "conversation"]
 categories = ["development-tools"]
 rust-version = "1.90"
+exclude = ["specs/", ".github/", "examples/*/target/", "*.md.backup"]
 
 [dependencies]
 tokio = { version = "1", features = ["full"] }
@@ -26,7 +30,6 @@ futures = "0.3"
 tracing = "0.1"
 
 [dev-dependencies]
-anyhow = "1"
 tokio-test = "0.4"
 tracing-subscriber = "0.3"
 reqwest = { version = "0.12", features = ["json"] }
