--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "talk"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 authors = ["gobenpark"]
 description = "A Rust library for creating controlled LLM agents with behavioral guidelines, tool integration, and multi-step conversation journeys"
@@ -49,3 +49,9 @@ features = ["tokio-comp", "connection-manager"]
 version = "0.8"
 optional = true
 features = ["runtime-tokio", "postgres"]
+
+# Configuration for docs.rs
+[package.metadata.docs.rs]
+all-features = true
+rustdoc-args = ["--cfg", "docsrs"]
+targets = ["x86_64-unknown-linux-gnu"]
